<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_label">Basic</string>
    <string name="advanced_label">Advanced</string>
    <string name="forecast_label">Forecast</string>
    <string name="temp_label">Temperature</string>
    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_speed_label">Wind speed</string>
    <string name="wind_direction_label">Wind direction</string>
    <string name="visibility_label">Visibility</string>
    <string name="refresh_label">Refresh</string>
    <string name="city_label">City</string>
    <string name="metric_label">Metric</string>
    <string name="imperial_label">Imperial</string>
    <string name="save_label">Save</string>
    <string name="favorite_label">Favorite</string>
    <string name="delete_label">Delete</string>
</resources>